# textjenerator

./: .gitignore  README.md  pyproject.toml
src/packagename/core/: base_class.py
src/packagename/examples/: run_inference.py
src/packagename/models/: model_class.py
src/textjenerator/: __init__.py  config.py  registry.py
src/textjenerator/core/: text_generation_record.py  text_generator.py
src/textjenerator/examples/: chat.py  chat_completion.py  chat_llama.py  chat_transformers.py
src/textjenerator/local/: llama_cpp.py  transformers.py
src/textjenerator/models/: llama_cpp.py
