[project]
name = "textjenerator"
version = "1.0.1"
description = "AI text generator"
authors = [{ name = "Warren Davies"}]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/WarrenDavies/text-jenerator"
repository = "https://github.com/WarrenDavies/text-jenerator"
packages = [
    { include = "textjenerator", from = "src" }
]
requires-python = ">=3.10,<3.15"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
llama-cpp-python = ">=0.3.16,<0.4.0"
basejenerator = {path = "../base-jenerator", develop = true}
transformers = "^5.2.0"
accelerate = "^1.12.0"
bitsandbytes = "^0.49.2"
torch = {version = "2.9.1+cu128", source = "pytorch-cu128"}

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
